--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
     <body>
         <div class="container">
             <div class="row">
-                // Your HTML HERE
-                
-                
+            <h1>Piglatinizer</h1>
             </div>
         </div>
+ <input id="answer" placeholder="Type Here">
+        <button>Submit</button>
+        <div class="container">
+            <div class="row">
+            <div id="result"> </div>
  	</body>
 
 </html>
