Functions were added to the Code

--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
             <div class="row">
             <h1>Piglatinizer</h1>
             </div>
-        </div>
- <input id="answer" placeholder="Type Here">
-        <button>Submit</button>
-        <div class="container">
             <div class="row">
-            <div id="result"> </div>
+            <center><img src="https://cdn.iconscout.com/public/images/icon/free/png-512/pig-face-sus-wild-animal-food-3088363eeae1bedf-512x512.png"></center>
+            </div>
+        </div>
+ <center><input id="answer" placeholder="Type Here"></center>
+        <center><button id="button">Submit</button></center>
+        <div class="container">
+            <div class="col-12">
+            <center><div id="result"></div></center>
+        </div>
  	</body>
 
 </html>
